# 100daysofcode-with-python-course

./: pyproject.toml
days/01-03-datetimes/code/: bites.ipynb  datetime_date.ipynb  datetime_timedelta.ipynb
days/04-06-collections/: collections.ipynb  day4.ipynb
